<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_value_grey"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_header_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="200dp"
        android:background="@drawable/weather_background"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingTop="?actionBarSize"
        android:paddingEnd="@dimen/spacing_medium"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/text_view_place_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_normal"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxEms="20"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="New Delhi" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_xnormal"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/image_view_weather_icon" />

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_place_name"
            tools:text="Friday 20 Nov" />

        <TextView
            android:id="@+id/text_view_weather_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_medium"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_xnormal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_date"
            tools:text="Light Rain" />

        <ImageView
            android:id="@+id/image_view_weather_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_cloudy_sun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/text_view_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_xxnormal"
            android:textColor="@color/white"
            android:textSize="82sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="37" />

        <TextView
            android:id="@+id/text_view_temp_subscript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-40dp"
            android:layout_marginTop="1dp"
            android:text="@string/text_celsius"
            android:textColor="@color/white"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@id/text_view_temperature"
            app:layout_constraintTop_toTopOf="@id/text_view_temperature" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_weather_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_margin="@dimen/spacing_xnormal"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_header_view"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/image_thermometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_thermometer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:text="@string/title_feels_like"
            android:textColor="@color/text_grey"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/image_thermometer"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_feels_like_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:textColor="@color/text_value_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/image_thermometer"
            app:layout_constraintTop_toBottomOf="@+id/text_view_feels_like"
            tools:text="22*C" />

        <TextView
            android:id="@+id/text_view_current_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="1dp"
            android:text="@string/today"
            android:textColor="@color/teal_700"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/text_view_feels_like_value"
            app:layout_constraintTop_toBottomOf="@+id/text_view_feels_like" />

        <ImageView
            android:id="@+id/image_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_wind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_thermometer" />

        <TextView
            android:id="@+id/text_view_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/title_wind"
            android:textColor="@color/text_grey"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/image_wind"
            app:layout_constraintTop_toBottomOf="@+id/text_view_feels_like_value"
            app:layout_constraintTop_toTopOf="@+id/image_wind" />

        <TextView
            android:id="@+id/text_view_wind_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:textColor="@color/text_value_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/image_wind"
            app:layout_constraintTop_toBottomOf="@+id/text_view_wind"
            tools:text="13km/hr" />

        <ImageView
            android:id="@+id/image_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_humidity"
            app:layout_constraintEnd_toStartOf="@+id/text_view_humidity"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/title_humidity"
            android:textColor="@color/text_grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:textColor="@color/text_value_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/image_humidity"
            app:layout_constraintTop_toBottomOf="@id/text_view_humidity"
            tools:text="20%" />

        <ImageView
            android:id="@+id/image_uv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_uv"
            app:layout_constraintEnd_toStartOf="@+id/text_view_uv_index"
            app:layout_constraintTop_toBottomOf="@+id/image_humidity" />

        <TextView
            android:id="@+id/text_view_uv_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="20dp"
            android:text="@string/title_uv_index"
            android:textColor="@color/text_grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_humidity_value"
            app:layout_constraintTop_toTopOf="@id/image_uv" />

        <TextView
            android:id="@+id/text_view_uv_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:textColor="@color/text_value_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/image_uv"
            app:layout_constraintTop_toBottomOf="@id/text_view_uv_index"
            tools:text="20" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>